<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Screen1Fragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background" />

    <ImageView
        android:id="@+id/ivphoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:background="@drawable/ic_photo"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@id/ivphoto"
        tools:layout_editor_absoluteX="165dp">

        <EditText
            android:id="@+id/etname"
            android:hint="@string/nama"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_et"/>

        <EditText
            android:id="@+id/etpoli"
            android:hint="@string/polindrom"
            android:padding="10dp"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_et"/>

        <Button
            android:id="@+id/btcheck"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:text="@string/check"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_bt"/>

        <Button
            android:id="@+id/btnext1"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:text="@string/next"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_bt"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>